; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_driver.c_menu_navigation_add_scroll_index.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_driver.c_menu_navigation_add_scroll_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@scroll_index_list = common dso_local global i64* null, align 8
@scroll_index_size = common dso_local global i64 0, align 8
@SCROLL_INDEX_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @menu_navigation_add_scroll_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @menu_navigation_add_scroll_index(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64*, i64** @scroll_index_list, align 8
  %5 = load i64, i64* @scroll_index_size, align 8
  %6 = getelementptr inbounds i64, i64* %4, i64 %5
  store i64 %3, i64* %6, align 8
  %7 = load i64, i64* @scroll_index_size, align 8
  %8 = add i64 %7, 1
  %9 = load i64, i64* @SCROLL_INDEX_SIZE, align 8
  %10 = icmp uge i64 %8, %9
  br i1 %10, label %14, label %11

11:                                               ; preds = %1
  %12 = load i64, i64* @scroll_index_size, align 8
  %13 = add i64 %12, 1
  store i64 %13, i64* @scroll_index_size, align 8
  br label %14

14:                                               ; preds = %11, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
